Loadtest switch to ghz (#2982)
Update load testing framework:

- Switch from K6 (HTTP) to [ghz](https://ghz.sh) (gRPC) load testing
framework.
- Introduce policy sets. Move existing policies to the classic set,
introduce the multitenant set based on role policies.
- Remove deprecated `crb_*` and `crs_*` request templates. Update `cr_*`
request templates to contain only requests (no url or wantResponse
fields).
- Scrape PDP metrics endpoint (RSS, heap alloc/sys/inuse, stack, GC sys)
before and after each test. Results are printed as a human-readable diff
table and saved as JSON.

---------

Signed-off-by: Dennis Buduev <dbuduev@users.noreply.github.com>
Co-authored-by: Dennis Buduev <dbuduev@users.noreply.github.com>

--- a/hack/loadtest/docker-compose.yml
+++ b/hack/loadtest/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.9"
 services:
   cerbos:
     container_name: cerbos
@@ -6,7 +5,9 @@ services:
     restart: always
     command: ["server", "--config=/conf/.cerbos.yaml", "--log-level=warn", "--debug-listen-addr=:6666"]
     depends_on:
-      - postgres
+      postgres:
+        condition: service_started
+        required: false
     environment:
       - AUDIT_ENABLED=${AUDIT_ENABLED}
       - SCHEMA_ENFORCEMENT=${SCHEMA_ENFORCEMENT}
@@ -22,16 +23,18 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '2.0'
-          memory: 200M
+          cpus: '4.0'
+          memory: 512M
         reservations:
-          cpus: '0.5'
-          memory: 30M
+          cpus: '1.0'
+          memory: 64M
 
   postgres:
     container_name: postgres
     image: postgres:14.0-alpine
     restart: always
+    profiles:
+      - postgres
     environment:
       - POSTGRES_USER=cerbos
       - POSTGRES_PASSWORD=cerbos
